apps/flashdeutsch/service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations: {}
  name: flashdeutsch-vocab
  namespace: default
spec:
  internalTrafficPolicy: Cluster
  ipFamilies:
    - IPv4
  ipFamilyPolicy: SingleStack
  ports:
    - port: 80
      protocol: TCP
      targetPort: 80
  selector:
    app: flashdeutsch-vocab
  sessionAffinity: None
  type: ClusterIP
