apps/flashdeutsch/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: flashdeutsch-vocab
  namespace: default
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: flashdeutsch-vocab
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      annotations: {}
      labels:
        app: flashdeutsch-vocab
    spec:
      containers:
        - image: ghcr.io/tusher16/flashdeutsch-vocab:latest
          imagePullPolicy: Always
          name: nginx
          ports:
            - containerPort: 80
              protocol: TCP
          resources:
            limits:
              cpu: 100m
              memory: 64Mi
            requests:
              cpu: 50m
              memory: 32Mi
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
      dnsPolicy: ClusterFirst
      imagePullSecrets:
        - name: ghcr-secret
      nodeSelector:
        kubernetes.io/hostname: elitedesk-node1
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
---
apiVersion: v1
kind: Service
metadata:
  name: flashdeutsch-vocab
  namespace: default
spec:
  internalTrafficPolicy: Cluster
  ipFamilies:
    - IPv4
  ipFamilyPolicy: SingleStack
  ports:
    - port: 80
      protocol: TCP
      targetPort: 80
  selector:
    app: flashdeutsch-vocab
  sessionAffinity: None
  type: ClusterIP
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: flashdeutsch-vocab
  namespace: default
spec:
  ingressClassName: traefik
  rules:
    - host: flashdeutsch.tusher16.com
      http:
        paths:
          - backend:
              service:
                name: flashdeutsch-vocab
                port:
                  number: 80
            path: /
            pathType: Prefix
  tls:
    - hosts:
        - flashdeutsch.tusher16.com
      secretName: flashdeutsch-vocab-tls
---
apiVersion: v1
kind: Service
metadata:
  name: flashdeutsch-vocab
  namespace: default
spec:
  internalTrafficPolicy: Cluster
  ipFamilies:
    - IPv4
  ipFamilyPolicy: SingleStack
  ports:
    - port: 80
      protocol: TCP
      targetPort: 80
  selector:
    app: flashdeutsch-vocab
  sessionAffinity: None
  type: ClusterIP
---
apiVersion: v1
kind: Service
metadata:
  name: flashdeutsch-vocab
  namespace: default
spec:
  internalTrafficPolicy: Cluster
  ipFamilies:
    - IPv4
  ipFamilyPolicy: SingleStack
  ports:
    - port: 80
      protocol: TCP
      targetPort: 80
  selector:
    app: flashdeutsch-vocab
  sessionAffinity: None
  type: ClusterIP
